--- a/Resources/Prototypes/Recipes/Construction/Graphs/clothing/mime_hardsuit.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/clothing/mime_hardsuit.yml
@@ -10,31 +10,31 @@
               amount: 5
               doAfter: 1
             - tag: SuitEVA
-              name: скафандр EVA
+              name: скафандр EVA # Imperial Recipes Locale
               icon:
                 sprite: Clothing/OuterClothing/Suits/eva.rsi
                 state: icon
               doAfter: 1
             - tag: HelmetEVA
-              name: шлем скафандра EVA
+              name: шлем скафандра EVA # Imperial Recipes Locale
               icon:
                 sprite: Clothing/Head/Helmets/eva.rsi
                 state: icon
               doAfter: 1
             - tag: CrayonRed
-              name: красный мелок
+              name: красный мелок # Imperial Recipes Locale
               icon:
                 sprite: Objects/Fun/crayons.rsi
                 state: red
               doAfter: 1
             - tag: CrayonBlack
-              name: черный мелок
+              name: черный мелок # Imperial Recipes Locale
               icon:
                 sprite: Objects/Fun/crayons.rsi
                 state: black
               doAfter: 1
             - tag: MimeBelt
-              name: подтяжки
+              name: подтяжки # Imperial Recipes Locale
               icon:
                 sprite: Clothing/Belt/suspenders_red.rsi
                 state: icon
