--- a/Resources/Prototypes/Recipes/Construction/Graphs/furniture/tables.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/furniture/tables.yml
@@ -233,7 +233,7 @@
         - to: TableFancyBlack
           steps:
             - tag: CarpetBlack
-              name: черный ковер
+              name: черный ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-black
@@ -241,7 +241,7 @@
         - to: TableFancyBlue
           steps:
             - tag: CarpetBlue
-              name: синий ковер
+              name: синий ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-blue
@@ -249,7 +249,7 @@
         - to: TableFancyCyan
           steps:
             - tag: CarpetCyan
-              name: голубой ковер
+              name: голубой ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-cyan
@@ -257,7 +257,7 @@
         - to: TableFancyGreen
           steps:
             - tag: CarpetGreen
-              name: зеленый ковер
+              name: зеленый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-green
@@ -265,7 +265,7 @@
         - to: TableFancyOrange
           steps:
             - tag: CarpetOrange
-              name: оранжевый ковер
+              name: оранжевый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-orange
@@ -273,7 +273,7 @@
         - to: TableFancyPurple
           steps:
             - tag: CarpetPurple
-              name: фиолетовый ковер
+              name: фиолетовый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-purple
@@ -281,7 +281,7 @@
         - to: TableFancyPink
           steps:
             - tag: CarpetPink
-              name: розовый ковер
+              name: розовый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-pink
@@ -289,7 +289,7 @@
         - to: TableFancyRed
           steps:
             - tag: CarpetRed
-              name: красный ковер
+              name: красный ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-red
@@ -297,7 +297,7 @@
         - to: TableFancyWhite
           steps:
             - tag: CarpetWhite
-              name: белый ковер
+              name: белый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-white
