--- a/Resources/Prototypes/Recipes/Construction/Graphs/mechs/honker_construction.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/mechs/honker_construction.yml
@@ -14,7 +14,7 @@
           data: 1
 
       - tag: HonkerCentralControlModule
-        name: центральный модуль управления меха Х.О.Н.К.
+        name: центральный модуль управления меха Х.О.Н.К. # Imperial Recipes Locale
         icon:
           sprite: "Objects/Misc/module.rsi"
           state: "mainboard"
@@ -31,7 +31,7 @@
           data: 3
 
       - tag: HonkerPeripheralsControlModule
-        name: модуль управления периферией меха Х.О.Н.К.
+        name: модуль управления периферией меха Х.О.Н.К. # Imperial Recipes Locale
         icon:
           sprite: "Objects/Misc/module.rsi"
           state: id_mod
@@ -48,7 +48,7 @@
           data: 5
 
       - tag: HonkerTargetingControlModule
-        name: электрическую систему управления огнём меха Х.О.Н.К.
+        name: электрическую систему управления огнём меха Х.О.Н.К. # Imperial Recipes Locale
         icon:
           sprite: "Objects/Misc/module.rsi"
           state: id_mod
@@ -68,7 +68,7 @@
 #currently mechs don't support upgrading. add them back in once that's squared away.
 
       - component: PowerCell
-        name: любую батарейку
+        name: любую батарейку # Imperial Recipes Locale
         store: battery-container
         icon:
           sprite: Objects/Power/power_cells.rsi
@@ -89,7 +89,7 @@
         icon:
           sprite: "Clothing/Mask/clown.rsi"
           state: "icon"
-        name: парик и маска клоуна
+        name: парик и маска клоуна # Imperial Recipes Locale
         doAfter: 1
         completed:
         - !type:VisualizerDataInt
@@ -100,7 +100,7 @@
         icon:
           sprite: "Clothing/Shoes/Specific/clown.rsi"
           state: "icon"
-        name: клоунские туфли
+        name: клоунские туфли # Imperial Recipes Locale
         doAfter: 1
         completed:
         - !type:VisualizerDataInt
