--- a/Resources/Prototypes/Recipes/Construction/Graphs/structures/firelock.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/structures/firelock.yml
@@ -50,7 +50,7 @@
           steps:
             - tag: FirelockElectronics
               store: board
-              name: микросхема пожарного шлюза
+              name: микросхема пожарного шлюза # Imperial Recipes Locale
               icon:
                 sprite: "Objects/Misc/module.rsi"
                 state: "mainboard"
