--- a/Resources/Prototypes/Recipes/Construction/Graphs/weapons/shiv.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/weapons/shiv.yml
@@ -22,7 +22,7 @@
     - to: icon
       steps:
       - tag: GlassShard
-        name: осколок стекла
+        name: осколок стекла # Imperial Recipes Locale
         icon:
           sprite: Objects/Materials/Shards/shard.rsi
           state: shard1
@@ -57,7 +57,7 @@
     - to: icon
       steps:
       - tag: ReinforcedGlassShard
-        name: осколок бронестекла
+        name: осколок бронестекла # Imperial Recipes Locale
         icon:
           sprite: Objects/Materials/Shards/shard.rsi
           state: shard1
@@ -92,7 +92,7 @@
     - to: icon
       steps:
       - tag: PlasmaGlassShard
-        name: осколок плазменного стекла
+        name: осколок плазменного стекла # Imperial Recipes Locale
         icon:
           sprite: Objects/Materials/Shards/shard.rsi
           state: shard1
@@ -127,7 +127,7 @@
     - to: icon
       steps:
       - tag: UraniumGlassShard
-        name: осколок плазменного стекла
+        name: осколок плазменного стекла # Imperial Recipes Locale
         icon:
           sprite: Objects/Materials/Shards/shard.rsi
           state: shard1
