--- a/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/flowerwreath.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/flowerwreath.yml
@@ -7,17 +7,17 @@
         - to: flowerwreath
           steps:
             - tag: Flower
-              name: цветок
+              name: цветок # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/poppy.rsi
                 state: produce
             - tag: Flower
-              name: цветок
+              name: цветок # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/poppy.rsi
                 state: produce
             - tag: Ambrosia
-              name: амброзия
+              name: амброзия # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/ambrosia_vulgaris.rsi
                 state: produce
