--- a/Resources/Prototypes/Recipes/Construction/Graphs/clothing/clown_banana.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/clothing/clown_banana.yml
@@ -7,19 +7,19 @@
         - to: jumpsuit
           steps:
             - tag: BananaPeel
-              name: банановая кожура
+              name: банановая кожура # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/banana.rsi
                 state: peel
               doAfter: 1
             - tag: BananaPeel
-              name: банановая кожура
+              name: банановая кожура # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/banana.rsi
                 state: peel
               doAfter: 1
             - tag: BananaPeel
-              name: банановая кожура
+              name: банановая кожура # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/banana.rsi
                 state: peel
@@ -28,7 +28,7 @@
               amount: 1
               doAfter: 1
             - tag: ClownSuit
-              name: клоунский комбинезон
+              name: клоунский комбинезон # Imperial Recipes Locale
               icon:
                 sprite: Clothing/Uniforms/Jumpsuit/clown.rsi
                 state: icon
@@ -45,19 +45,19 @@
         - to: shoes
           steps:
             - tag: BananaPeel
-              name: банановая кожура
+              name: банановая кожура # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/banana.rsi
                 state: peel
               doAfter: 1
             - tag: BananaPeel
-              name: банановая кожура
+              name: банановая кожура # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/banana.rsi
                 state: peel
               doAfter: 1
             - tag: BananaPeel
-              name: банановая кожура
+              name: банановая кожура # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/banana.rsi
                 state: peel
@@ -66,7 +66,7 @@
               amount: 1
               doAfter: 1
             - tag: ClownShoes
-              name: клоунские туфли
+              name: клоунские туфли # Imperial Recipes Locale
               icon:
                 sprite: Clothing/Shoes/Specific/clown.rsi
                 state: icon
@@ -83,19 +83,19 @@
         - to: mask
           steps:
             - tag: BananaPeel
-              name: банановая кожура
+              name: банановая кожура # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/banana.rsi
                 state: peel
               doAfter: 1
             - tag: BananaPeel
-              name: банановая кожура
+              name: банановая кожура # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/banana.rsi
                 state: peel
               doAfter: 1
             - tag: BananaPeel
-              name: банановая кожура
+              name: банановая кожура # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/banana.rsi
                 state: peel
@@ -104,7 +104,7 @@
               amount: 1
               doAfter: 1
             - tag: ClownMask
-              name: парик и маска клоуна
+              name: парик и маска клоуна # Imperial Recipes Locale
               icon:
                 sprite: Clothing/Mask/clown.rsi
                 state: icon
