--- a/Resources/Prototypes/Recipes/Construction/Graphs/clothing/ducky_slippers.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/clothing/ducky_slippers.yml
@@ -7,13 +7,13 @@
         - to: shoes
           steps:
             - tag: ToyRubberDuck
-              name: резиновая уточка
+              name: резиновая уточка # Imperial Recipes Locale
               icon:
                 sprite: Objects/Fun/ducky.rsi
                 state: icon
               doAfter: 1
             - tag: ToyRubberDuck
-              name: резиновая уточка
+              name: резиновая уточка # Imperial Recipes Locale
               icon:
                 sprite: Objects/Fun/ducky.rsi
                 state: icon
