--- a/Resources/Prototypes/Recipes/Construction/Graphs/clothing/glasses_sechud.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/clothing/glasses_sechud.yml
@@ -7,13 +7,13 @@
         - to: glassesSec
           steps:
             - tag: Sunglasses
-              name: солнцезащитные очки
+              name: солнцезащитные очки # Imperial Recipes Locale
               icon:
                 sprite: Clothing/Eyes/Glasses/sunglasses.rsi
                 state: icon
               doAfter: 5
             - tag: HudSecurity
-              name: охранный визор
+              name: охранный визор # Imperial Recipes Locale
               icon:
                 sprite: Clothing/Eyes/Hud/sec.rsi
                 state: icon
