--- a/Resources/Prototypes/Recipes/Construction/Graphs/fun/bananium_horn.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/fun/bananium_horn.yml
@@ -7,7 +7,7 @@
         - to: bananiumHorn
           steps:
             - tag: Pipe
-              name: труба
+              name: труба # Imperial Recipes Locale
               icon:
                 sprite: Structures/Piping/Atmospherics/pipe.rsi
                 state: pipeStraight
@@ -16,7 +16,7 @@
               amount: 4
               doAfter: 1
             - tag: BikeHorn
-              name: велосипедный клаксон
+              name: велосипедный клаксон # Imperial Recipes Locale
               icon:
                 sprite: Objects/Fun/bikehorn.rsi
                 state: icon
