--- a/Resources/Prototypes/Recipes/Construction/Graphs/furniture/curtains.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/furniture/curtains.yml
@@ -19,7 +19,7 @@
           steps:
             - tag: CarpetBlack
               doAfter: 1
-              name: черный ковер
+              name: черный ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-black
@@ -29,7 +29,7 @@
           steps:
             - tag: CarpetBlue
               doAfter: 1
-              name: синий ковер
+              name: синий ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-blue
@@ -39,7 +39,7 @@
           steps:
             - tag: CarpetCyan
               doAfter: 1
-              name: голубой ковер
+              name: голубой ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-cyan
@@ -49,7 +49,7 @@
           steps:
             - tag: CarpetGreen
               doAfter: 1
-              name: зеленый ковер
+              name: зеленый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-green
@@ -59,7 +59,7 @@
           steps:
             - tag: CarpetOrange
               doAfter: 1
-              name: оранжевый ковер
+              name: оранжевый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-orange
@@ -69,7 +69,7 @@
           steps:
             - tag: CarpetPink
               doAfter: 1
-              name: розовый ковер
+              name: розовый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-pink
@@ -79,7 +79,7 @@
           steps:
             - tag: CarpetPurple
               doAfter: 1
-              name: фиолетовый ковер
+              name: фиолетовый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-purple
@@ -89,7 +89,7 @@
           steps:
             - tag: CarpetRed
               doAfter: 1
-              name: красный ковер
+              name: красный ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-red
@@ -99,7 +99,7 @@
           steps:
             - tag: CarpetWhite
               doAfter: 1
-              name: белый ковер
+              name: белый ковер # Imperial Recipes Locale
               icon:
                 sprite: Objects/Tiles/tile.rsi
                 state: carpet-white
