--- a/Resources/Prototypes/Recipes/Construction/Graphs/mechs/ripley_construction.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/mechs/ripley_construction.yml
@@ -34,7 +34,7 @@
           data: 4
 
       - tag: RipleyCentralControlModule
-        name: центральный модуль управления РИПЛИ
+        name: центральный модуль управления РИПЛИ # Imperial Recipes Locale
         icon:
           sprite: "Objects/Misc/module.rsi"
           state: "mainboard"
@@ -51,7 +51,7 @@
           data: 6
 
       - tag: RipleyPeripheralsControlModule
-        name: модуль управления периферией РИПЛИ
+        name: модуль управления периферией РИПЛИ # Imperial Recipes Locale
         icon:
           sprite: "Objects/Misc/module.rsi"
           state: id_mod
@@ -71,7 +71,7 @@
 #currently mechs don't support upgrading. add them back in once that's squared away.
 
       - component: PowerCell
-        name: любую батарейку
+        name: любую батарейку # Imperial Recipes Locale
         store: battery-container
         icon:
           sprite: Objects/Power/power_cells.rsi
