--- a/Resources/Prototypes/Recipes/Construction/Graphs/mechs/vim_construction.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/mechs/vim_construction.yml
@@ -7,7 +7,7 @@
     - to: vim
       steps:
       - tag: VoiceTrigger
-        name: голосовой триггер
+        name: голосовой триггер # Imperial Recipes Locale
         icon:
           sprite: "Objects/Devices/voice.rsi"
           state: "voice"
@@ -16,7 +16,7 @@
           key: "enum.MechAssemblyVisuals.State"
           data: 1
       - component: PowerCell
-        name: любую батарейку
+        name: любую батарейку # Imperial Recipes Locale
         store: battery-container
         icon:
           sprite: Objects/Power/power_cells.rsi
