--- a/Resources/Prototypes/Recipes/Construction/Graphs/structures/airlock_clockwork.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/structures/airlock_clockwork.yml
@@ -48,7 +48,7 @@
       steps:
       - tag: DoorElectronics
         store: board
-        name: микросхема шлюза
+        name: микросхема шлюза # Imperial Recipes Locale
         icon:
           sprite: "Objects/Misc/module.rsi"
           state: "door_electronics"
