--- a/Resources/Prototypes/Recipes/Construction/Graphs/structures/conveyor.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/structures/conveyor.yml
@@ -10,7 +10,7 @@
               icon:
                 sprite: Structures/conveyor.rsi
                 state: conveyor_loose
-              name: разобранная конвейерная лента
+              name: разобранная конвейерная лента # Imperial Recipes Locale
               doAfter: 2
     - node: item
       entity: ConveyorBeltAssembly
