--- a/Resources/Prototypes/Recipes/Construction/Graphs/structures/secretdoor.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/structures/secretdoor.yml
@@ -48,7 +48,7 @@
     - to: electronics
       steps:
       - component: PowerCell
-        name: любая батарейка
+        name: любая батарейка # Imperial Recipes Locale
         store: battery-container
         icon:
           sprite: Objects/Power/power_cells.rsi
