--- a/Resources/Prototypes/Recipes/Construction/Graphs/structures/shutter.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/structures/shutter.yml
@@ -45,7 +45,7 @@
               anchored: true
           steps:
             - component: DoorElectronics
-              name: микросхема шлюза
+              name: микросхема шлюза # Imperial Recipes Locale
               icon:
                 sprite: "Objects/Misc/module.rsi"
                 state: "door_electronics"
