--- a/Resources/Prototypes/Recipes/Construction/Graphs/structures/shuttle.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/structures/shuttle.yml
@@ -25,7 +25,7 @@
       steps:
       - component: DoorElectronics
         store: board
-        name: микросхема шлюза
+        name: микросхема шлюза # Imperial Recipes Locale
         icon:
           sprite: "Objects/Misc/module.rsi"
           state: "door_electronics"
