--- a/Resources/Prototypes/Recipes/Construction/Graphs/utilities/solarpanel.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/utilities/solarpanel.yml
@@ -7,7 +7,7 @@
         - to: solarassembly
           steps:
             - tag: SolarAssemblyFlatpack
-              name: упаковка солнечной панели
+              name: упаковка солнечной панели # Imperial Recipes Locale
               icon:
                 sprite: Objects/Devices/flatpack.rsi
                 state: solar-assembly-part
@@ -39,7 +39,7 @@
             - !type:EntityAnchored
           steps:
             - tag: SolarTrackerElectronics
-              name: микросхема солнечного трекера
+              name: микросхема солнечного трекера # Imperial Recipes Locale
               icon:
                 sprite: Objects/Misc/module.rsi
                 state: id_mod
