--- a/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_generator.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_generator.yml
@@ -37,7 +37,7 @@
         steps:
         - tag: WallmountGeneratorElectronics
           store: board
-          name: микросхема настенного генератора
+          name: микросхема настенного генератора # Imperial Recipes Locale
           icon:
             sprite: "Objects/Misc/module.rsi"
             state: "charger_APC"
@@ -46,7 +46,7 @@
         steps:
         - tag: WallmountGeneratorAPUElectronics
           store: board
-          name: микросхема настенной ВСУ
+          name: микросхема настенной ВСУ # Imperial Recipes Locale
           icon:
             sprite: "Objects/Misc/module.rsi"
             state: "charger_APC"
