--- a/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_substation.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_substation.yml
@@ -43,7 +43,7 @@
         steps:
         - tag: WallmountSubstationElectronics
           store: board
-          name: микросхема настенной подстанции
+          name: микросхема настенной подстанции # Imperial Recipes Locale
           icon:
             sprite: "Objects/Misc/module.rsi"
             state: "charger_APC"
@@ -52,7 +52,7 @@
             - PowerCell
             - PowerCellSmall
           store: powercell
-          name: любая батарейка
+          name: любая батарейка # Imperial Recipes Locale
           icon:
             sprite: "Objects/Power/power_cells.rsi"
             state: "medium"
