--- a/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_telemonitors.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/utilities/wallmount_telemonitors.yml
@@ -38,7 +38,7 @@
             - tool: Screwing
               doAfter: 2
             - tag: SurveillanceCameraMonitorCircuitboard
-              name: машинная плата монитора камер наблюдения 
+              name: машинная плата монитора камер наблюдения  # Imperial Recipes Locale
               icon:
                 sprite: Objects/Misc/module.rsi
                 state: cpuboard
@@ -127,7 +127,7 @@
             - tool: Screwing
               doAfter: 2
             - tag: ComputerTelevisionCircuitboard
-              name: машинная плата телевизора
+              name: машинная плата телевизора # Imperial Recipes Locale
               icon:
                 sprite: Objects/Misc/module.rsi
                 state: cpuboard
