--- a/Resources/Prototypes/Recipes/Construction/Graphs/weapons/bola.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/weapons/bola.yml
@@ -11,7 +11,7 @@
                 sprite: Objects/Misc/cablecuffs.rsi
                 state: cuff
                 color: red
-              name: стяжки
+              name: стяжки # Imperial Recipes Locale
             - material: Steel
               amount: 6
               doAfter: 2
