--- a/Resources/Prototypes/Recipes/Construction/lighting.yml
+++ b/Resources/Prototypes/Recipes/Construction/lighting.yml
@@ -1,65 +1,65 @@
 ﻿- type: construction
-  name: Голубая лампа-трубка
+  name: Голубая лампа-трубка # Imperial Recipes Locale
   id: CyanLight
   graph: CyanLight
   startNode: start
   targetNode: icon
   category: construction-category-utilities
-  description: Лампа большой мощности с небольшим голубым кристаллом внутри.
+  description: Лампа большой мощности с небольшим голубым кристаллом внутри. # Imperial Recipes Locale
   icon: { sprite: Objects/Power/light_tube.rsi, state: normal }
   objectType: Item
 
 - type: construction
-  name: Синяя лампа-трубка
+  name: Синяя лампа-трубка # Imperial Recipes Locale
   id: BlueLight
   graph: BlueLight
   startNode: start
   targetNode: icon
   category: construction-category-utilities
-  description: Лампа большой мощности с небольшим синим кристаллом внутри.
+  description: Лампа большой мощности с небольшим синим кристаллом внутри. # Imperial Recipes Locale
   icon: { sprite: Objects/Power/light_tube.rsi, state: normal }
   objectType: Item
 
 - type: construction
-  name: Розовая лампа-трубка
+  name: Розовая лампа-трубка # Imperial Recipes Locale
   id: PinkLight
   graph: PinkLight
   startNode: start
   targetNode: icon
   category: construction-category-utilities
-  description: Лампа большой мощности с небольшим розовым кристаллом внутри.
+  description: Лампа большой мощности с небольшим розовым кристаллом внутри. # Imperial Recipes Locale
   icon: { sprite: Objects/Power/light_tube.rsi, state: normal }
   objectType: Item
 
 - type: construction
-  name: Оранжевая лампа-трубка
+  name: Оранжевая лампа-трубка # Imperial Recipes Locale
   id: OrangeLight
   graph: OrangeLight
   startNode: start
   targetNode: icon
   category: construction-category-utilities
-  description: Лампа большой мощности с небольшим оранжевым кристаллом внутри.
+  description: Лампа большой мощности с небольшим оранжевым кристаллом внутри. # Imperial Recipes Locale
   icon: { sprite: Objects/Power/light_tube.rsi, state: normal }
   objectType: Item
 
 - type: construction
-  name: Красная лампа-трубка
+  name: Красная лампа-трубка # Imperial Recipes Locale
   id: RedLight
   graph: RedLight
   startNode: start
   targetNode: icon
   category: construction-category-utilities
-  description: Лампа большой мощности с небольшим цветным красным кристаллом внутри.
+  description: Лампа большой мощности с небольшим цветным красным кристаллом внутри. # Imperial Recipes Locale
   icon: { sprite: Objects/Power/light_tube.rsi, state: normal }
   objectType: Item
 
 - type: construction
-  name: Зеленая лампа-трубка
+  name: Зеленая лампа-трубка # Imperial Recipes Locale
   id: GreenLight
   graph: GreenLight
   startNode: start
   targetNode: icon
   category: construction-category-utilities
-  description: Лампа большой мощности с небольшим зелёным кристаллом внутри.
+  description: Лампа большой мощности с небольшим зелёным кристаллом внутри. # Imperial Recipes Locale
   icon: { sprite: Objects/Power/light_tube.rsi, state: normal }
   objectType: Item
