--- a/Resources/Prototypes/Recipes/Construction/materials.yml
+++ b/Resources/Prototypes/Recipes/Construction/materials.yml
@@ -1,17 +1,17 @@
 ﻿- type: construction
-  name: Металлический стержень
+  name: Металлический стержень # Imperial Recipes Locale
   id: MetalRod
   graph: MetalRod
   startNode: start
   targetNode: MetalRod
   category: construction-category-materials
-  description: Прочный металлический стержень, который можно использовать для различных целей.
+  description: Прочный металлический стержень, который можно использовать для различных целей. # Imperial Recipes Locale
   icon: { sprite: Objects/Materials/parts.rsi, state: rods }
   objectType: Item
 
 - type: construction
-  name: Бронестекло
-  description: Укрепленный лист стекла.
+  name: Бронестекло # Imperial Recipes Locale
+  description: Укрепленный лист стекла. # Imperial Recipes Locale
   id: SheetRGlass
   graph: Glass
   startNode: start
@@ -21,8 +21,8 @@
   objectType: Item
 
 - type: construction
-  name: Заводное стекло
-  description: Лист закаленного латунного стекла. 
+  name: Заводное стекло # Imperial Recipes Locale
+  description: Лист закаленного латунного стекла.  # Imperial Recipes Locale
   id: SheetClockworkGlass
   graph: Glass
   startNode: start
@@ -32,8 +32,8 @@
   objectType: Item
 
 - type: construction
-  name: Плазменное стекло
-  description: Лист полупрозрачной плазмы.
+  name: Плазменное стекло # Imperial Recipes Locale
+  description: Лист полупрозрачной плазмы. # Imperial Recipes Locale
   id: SheetPGlass
   graph: Glass
   startNode: start
@@ -43,8 +43,8 @@
   objectType: Item
 
 - type: construction
-  name: Укреплённое плазменное стекло
-  description: Лист укрепленной полупрозрачной плазмы.
+  name: Укреплённое плазменное стекло # Imperial Recipes Locale
+  description: Лист укрепленной полупрозрачной плазмы. # Imperial Recipes Locale
   id: SheetRPGlass
   graph: Glass
   startNode: start
@@ -54,8 +54,8 @@
   objectType: Item
 
 - type: construction
-  name: Укреплённое плазменное стекло
-  description: Лист укрепленной полупрозрачной плазмы.
+  name: Укреплённое плазменное стекло # Imperial Recipes Locale
+  description: Лист укрепленной полупрозрачной плазмы. # Imperial Recipes Locale
   id: SheetRPGlass0
   graph: Glass
   startNode: start
@@ -65,8 +65,8 @@
   objectType: Item
 
 - type: construction
-  name: Укреплённое плазменное стекло
-  description: Лист укрепленной полупрозрачной плазмы.
+  name: Укреплённое плазменное стекло # Imperial Recipes Locale
+  description: Лист укрепленной полупрозрачной плазмы. # Imperial Recipes Locale
   id: SheetRPGlass1
   graph: Glass
   startNode: start
@@ -76,19 +76,19 @@
   objectType: Item
 
 - type: construction
-  name: Дюраткань
+  name: Дюраткань # Imperial Recipes Locale
   id: MaterialDurathread
   graph: Durathread
   startNode: start
   targetNode: MaterialDurathread
   category: construction-category-materials
-  description: Высококачественная нить, используемая для изготовления прочной одежды.
+  description: Высококачественная нить, используемая для изготовления прочной одежды. # Imperial Recipes Locale
   icon: { sprite: Objects/Materials/materials.rsi, state: durathread }
   objectType: Item
 
 - type: construction
-  name: Урановое стекло
-  description: Лист уранового стекла.
+  name: Урановое стекло # Imperial Recipes Locale
+  description: Лист уранового стекла. # Imperial Recipes Locale
   id: SheetUGlass
   graph: Glass
   startNode: start
@@ -98,8 +98,8 @@
   objectType: Item
 
 - type: construction
-  name: Укреплённое урановое стекло
-  description: Укрепленный лист уранового стекла.
+  name: Укреплённое урановое стекло # Imperial Recipes Locale
+  description: Укрепленный лист уранового стекла. # Imperial Recipes Locale
   id: SheetRUGlass
   graph: Glass
   startNode: start
@@ -109,8 +109,8 @@
   objectType: Item
 
 - type: construction
-  name: Укреплённое урановое стекло
-  description: Укрепленный лист уранового стекла.
+  name: Укреплённое урановое стекло # Imperial Recipes Locale
+  description: Укрепленный лист уранового стекла. # Imperial Recipes Locale
   id: SheetRUGlass0
   graph: Glass
   startNode: start
@@ -120,8 +120,8 @@
   objectType: Item
 
 - type: construction
-  name: Укреплённое урановое стекло
-  description: Укрепленный лист уранового стекла.
+  name: Укреплённое урановое стекло # Imperial Recipes Locale
+  description: Укрепленный лист уранового стекла. # Imperial Recipes Locale
   id: SheetRUGlass1
   graph: Glass
   startNode: start
