--- a/Resources/Prototypes/Recipes/Construction/modular.yml
+++ b/Resources/Prototypes/Recipes/Construction/modular.yml
@@ -1,24 +1,24 @@
 - type: construction
-  name: Модульная граната
+  name: Модульная граната # Imperial Recipes Locale
   id: ModularGrenadeRecipe
   graph: ModularGrenadeGraph
   startNode: start
   targetNode: grenade
   category: construction-category-weapons
-  description: Соберите гранату, используя триггер и заряд.
+  description: Соберите гранату, используя триггер и заряд. # Imperial Recipes Locale
   icon:
     sprite: Objects/Weapons/Grenades/modular.rsi
     state: complete
   objectType: Item
 
 - type: construction
-  name: Модульная мина
+  name: Модульная мина # Imperial Recipes Locale
   id: ModularMineRecipe
   graph: ModularMineGraph
   startNode: start
   targetNode: mine
   category: construction-category-weapons
-  description: Соберите мину, используя заряд.
+  description: Соберите мину, используя заряд. # Imperial Recipes Locale
   icon:
     sprite: Objects/Misc/landmine.rsi
     state: landmine
