--- a/Resources/Prototypes/Recipes/Crafting/Graphs/bots/cleanbot.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/bots/cleanbot.yml
@@ -10,18 +10,18 @@
         icon:
           sprite: Objects/Tools/bucket.rsi
           state: icon
-        name: ведро
+        name: ведро # Imperial Recipes Locale
       - tag: ProximitySensor
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: датчик движения
+        name: датчик движения # Imperial Recipes Locale
         doAfter: 2
       - tag: BorgArm
         icon:
           sprite: Mobs/Silicon/drone.rsi
           state: l_hand
-        name: рука борга
+        name: рука борга # Imperial Recipes Locale
         doAfter: 2
   - node: bot
     entity: MobCleanBot
