--- a/Resources/Prototypes/Recipes/Crafting/Graphs/bots/firebot.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/bots/firebot.yml
@@ -10,24 +10,24 @@
         icon:
           sprite: Objects/Misc/fire_extinguisher.rsi
           state: fire_extinguisher_open
-        name: огнетушитель
+        name: огнетушитель # Imperial Recipes Locale
       - tag: FireHelmet
         icon: 
           sprite: Clothing/Head/Helmets/firehelmet.rsi
           state: icon
-        name: пожарный шлем
+        name: пожарный шлем # Imperial Recipes Locale
         doAfter: 2
       - tag: ProximitySensor
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: датчик движения
+        name: датчик движения # Imperial Recipes Locale
         doAfter: 2
       - tag: BorgArm
         icon:
           sprite: Mobs/Silicon/drone.rsi
           state: l_hand
-        name: рука борга
+        name: рука борга # Imperial Recipes Locale
         doAfter: 2
   - node: bot
     entity: MobFireBot
