--- a/Resources/Prototypes/Recipes/Crafting/Graphs/bots/medibot.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/bots/medibot.yml
@@ -10,24 +10,24 @@
         icon:
           sprite: Objects/Specific/Medical/firstaidkits.rsi
           state: firstaid
-        name: аптечка первой помощи
+        name: аптечка первой помощи # Imperial Recipes Locale
       - tag: DiscreteHealthAnalyzer
         icon:
           sprite: Objects/Specific/Medical/healthanalyzer.rsi
           state: analyzer
-        name: анализатор здоровья
+        name: анализатор здоровья # Imperial Recipes Locale
         doAfter: 2
       - tag: ProximitySensor
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: датчик движения
+        name: датчик движения # Imperial Recipes Locale
         doAfter: 2
       - tag: BorgArm
         icon:
           sprite: Mobs/Silicon/drone.rsi
           state: l_hand
-        name: рука борга
+        name: рука борга # Imperial Recipes Locale
         doAfter: 2
   - node: bot
     entity: MobMedibot
