--- a/Resources/Prototypes/Recipes/Crafting/Graphs/bots/supplybot.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/bots/supplybot.yml
@@ -10,12 +10,12 @@
         icon:
           sprite: Objects/Misc/proximity_sensor.rsi
           state: icon
-        name: датчик движения
+        name: датчик движения # Imperial Recipes Locale
       - tag: BorgHead
         icon:
           sprite: Objects/Specific/Robotics/cyborg_parts.rsi
           state: borg_head
-        name: голова борга
+        name: голова борга # Imperial Recipes Locale
         doAfter: 1
       - material: Steel
         amount: 10
