--- a/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/improvised_shotgun.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/improvised_shotgun.yml
@@ -10,17 +10,17 @@
         icon:
           sprite: Structures/Piping/Atmospherics/pipe.rsi
           state: pipeStraight
-        name: труба
+        name: труба # Imperial Recipes Locale
       - tag: ModularReceiver
         icon:
           sprite: Objects/Misc/modular_receiver.rsi
           state: icon
-        name: затворная рама
+        name: затворная рама # Imperial Recipes Locale
       - tag: RifleStock
         icon:
           sprite: Objects/Misc/rifle_stock.rsi
           state: icon
-        name: приклад
+        name: приклад # Imperial Recipes Locale
       - material: Cloth
         amount: 3
         doAfter: 10
