--- a/Resources/Prototypes/Recipes/Crafting/Graphs/strawhat.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/strawhat.yml
@@ -7,22 +7,22 @@
         - to: strawhat
           steps:
             - tag: Wheat
-              name: wheat bushel
+              name: пшеница # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/wheat.rsi
                 state: produce
             - tag: Wheat
-              name: wheat bushel
+              name: пшеница # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/wheat.rsi
                 state: produce
             - tag: Wheat
-              name: wheat bushel
+              name: пшеница # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/wheat.rsi
                 state: produce
             - tag: Wheat
-              name: wheat bushel
+              name: пшеница # Imperial Recipes Locale
               icon:
                 sprite: Objects/Specific/Hydroponics/wheat.rsi
                 state: produce
