--- a/Resources/Prototypes/Recipes/Crafting/bots.yml
+++ b/Resources/Prototypes/Recipes/Crafting/bots.yml
@@ -1,90 +1,90 @@
 - type: construction
-  name: Чистобот
+  name: Чистобот # Imperial Recipes Locale
   id: cleanbot
   graph: CleanBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: Ужас автоматизации угрожает и космическим уборщикам.
+  description: Ужас автоматизации угрожает и космическим уборщикам. # Imperial Recipes Locale
   icon:
     sprite: Mobs/Silicon/Bots/cleanbot.rsi
     state: cleanbot
 
 - type: construction
-  name: Пожарбот
+  name: Пожарбот # Imperial Recipes Locale
   id: firebot
   graph: FireBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: Этот бот тушит пожары, где бы они ни находились.
+  description: Этот бот тушит пожары, где бы они ни находились. # Imperial Recipes Locale
   icon:
     sprite: Mobs/Silicon/Bots/firebot.rsi
     state: firebot
 
 - type: construction
-  name: Хонкобот
+  name: Хонкобот # Imperial Recipes Locale
   id: honkbot
   graph: HonkBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: Этот бот смеётся и подскальзывает людей.
+  description: Этот бот смеётся и подскальзывает людей. # Imperial Recipes Locale
   icon:
     sprite: Mobs/Silicon/Bots/honkbot.rsi
     state: honkbot
 
 - type: construction
-  name: Кринжбот
+  name: Кринжбот # Imperial Recipes Locale
   id: jonkbot
   graph: JonkBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: Этот проклятый бот сигналит, смеется и подскальзывает людей.
+  description: Этот проклятый бот сигналит, смеется и подскальзывает людей. # Imperial Recipes Locale
   icon:
     sprite: Mobs/Silicon/Bots/honkbot.rsi
     state: jonkbot
 
 - type: construction
-  name: Медибот
+  name: Медибот # Imperial Recipes Locale
   id: medibot
   graph: MediBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: Не заменит врача, но лучше, чем ничего.
+  description: Не заменит врача, но лучше, чем ничего. # Imperial Recipes Locale
   icon:
     sprite: Mobs/Silicon/Bots/medibot.rsi
     state: medibot
 
 - type: construction
-  name: Мимбот
+  name: Мимбот # Imperial Recipes Locale
   id: mimebot
   graph: MimeBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: Почему бы не помахать мимботу?
+  description: Почему бы не помахать мимботу? # Imperial Recipes Locale
   icon:
     sprite: Mobs/Silicon/Bots/mimebot.rsi
     state: mimebot
 
 - type: construction
-  name: Каргобот
+  name: Каргобот # Imperial Recipes Locale
   id: supplybot
   graph: SupplyBot
   startNode: start
   targetNode: bot
   category: construction-category-utilities
   objectType: Item
-  description: Космические грузчики повторяют судьбу уборщиков.
+  description: Космические грузчики повторяют судьбу уборщиков. # Imperial Recipes Locale
   icon:
     sprite: Mobs/Silicon/Bots/supplybot.rsi
     state: supplybot
