--- a/Resources/Prototypes/Recipes/Crafting/crates.yml
+++ b/Resources/Prototypes/Recipes/Crafting/crates.yml
@@ -1,101 +1,101 @@
 - type: construction
-  name: Ящик для скота
+  name: Ящик для скота # Imperial Recipes Locale
   id: CrateLivestock
   graph: CrateLivestock
   startNode: start
   targetNode: cratelivestock
   category: construction-category-storage
-  description: Деревянный ящик для содержания скота.
+  description: Деревянный ящик для содержания скота. # Imperial Recipes Locale
   icon: { sprite: Structures/Storage/Crates/livestock.rsi, state: base }
   objectType: Structure
 
 - type: construction
-  name: Стальной ящик
+  name: Стальной ящик # Imperial Recipes Locale
   id: CrateGenericSteel
   graph: CrateGenericSteel
   startNode: start
   targetNode: crategenericsteel
   category: construction-category-storage
-  description: Металлический ящик для хранения вещей.
+  description: Металлический ящик для хранения вещей. # Imperial Recipes Locale
   icon: { sprite: Structures/Storage/Crates/generic.rsi, state: icon }
   objectType: Structure
 
 - type: construction
-  name: Защищённый ящик
+  name: Защищённый ящик # Imperial Recipes Locale
   id: CrateSecure
   graph: CrateSecure
   startNode: start
   targetNode: cratesecure
   category: construction-category-storage
-  description: Надежный металлический ящик для хранения вещей. Доступ может быть настроен с помощью конфигуратора доступов.
+  description: Надежный металлический ящик для хранения вещей. Доступ может быть настроен с помощью конфигуратора доступов. # Imperial Recipes Locale
   icon: { sprite: Structures/Storage/Crates/secure.rsi, state: icon }
   objectType: Structure
 
 - type: construction
-  name: Холодильник
+  name: Холодильник # Imperial Recipes Locale
   id: CrateFreezer
   graph: CrateFreezer
   startNode: start
   targetNode: done
   category: construction-category-storage
-  description: Металлический морозильный ящик для хранения вещей.
+  description: Металлический морозильный ящик для хранения вещей. # Imperial Recipes Locale
   icon: { sprite: Structures/Storage/Crates/freezer.rsi, state: icon }
   objectType: Structure
 
 - type: construction
-  name: Пластиковый ящик
+  name: Пластиковый ящик # Imperial Recipes Locale
   id: CratePlastic
   graph: CratePlastic
   startNode: start
   targetNode: crateplastic
   category: construction-category-storage
-  description: Пластиковый ящик для хранения вещей.
+  description: Пластиковый ящик для хранения вещей. # Imperial Recipes Locale
   icon: { sprite: Structures/Storage/Crates/plastic.rsi, state: icon }
   objectType: Structure
 
 - type: construction
-  name: Картонный ящик
+  name: Картонный ящик # Imperial Recipes Locale
   id: BigBox
   graph: BaseBigBox
   startNode: start
   targetNode: basebigbox
   category: construction-category-storage
-  description: Большой ящик, в котором можно хранить вещи или прятаться.
+  description: Большой ящик, в котором можно хранить вещи или прятаться. # Imperial Recipes Locale
   icon: { sprite: Structures/Storage/closet.rsi, state: cardboard }
   objectType: Structure
 
 - type: construction
-  name: Картонная коробка
+  name: Картонная коробка # Imperial Recipes Locale
   id: BoxCardboard
   graph: BoxCardboard
   startNode: start
   targetNode: boxcardboard
   category: construction-category-storage
-  description: Маленькая коробка для хранения вещей.
+  description: Маленькая коробка для хранения вещей. # Imperial Recipes Locale
   icon: { sprite: Objects/Storage/boxes.rsi, state: box }
   objectType: Item
 
 - type: construction
-  name: Коробка пиццы
+  name: Коробка пиццы # Imperial Recipes Locale
   id: FoodBoxPizza
   graph: FoodBoxPizza
   startNode: start
   targetNode: foodboxpizza
   category: construction-category-storage
-  description: Коробка для пиццы.
+  description: Коробка для пиццы. # Imperial Recipes Locale
   icon: 
     sprite: Objects/Consumable/Food/Baked/pizza.rsi
     state: box
   objectType: Item
 
 - type: construction
-  name: Гроб
+  name: Гроб # Imperial Recipes Locale
   id: CrateCoffin
   graph: CrateCoffin
   startNode: start
   targetNode: cratecoffin
   category: construction-category-storage
-  description: Гроб для хранения трупов.
+  description: Гроб для хранения трупов. # Imperial Recipes Locale
   icon: { sprite: Structures/Storage/Crates/coffin.rsi, state: base }
   objectType: Structure
   
