--- a/Resources/Prototypes/Recipes/Crafting/improvised.yml
+++ b/Resources/Prototypes/Recipes/Crafting/improvised.yml
@@ -1,229 +1,229 @@
 - type: construction
-  name: Бейсбольная бита
+  name: Бейсбольная бита # Imperial Recipes Locale
   id: bat
   graph: WoodenBat
   startNode: start
   targetNode: bat
   category: construction-category-weapons
-  description: Прочная бейсбольная бита.
+  description: Прочная бейсбольная бита. # Imperial Recipes Locale
   icon:
     sprite: Objects/Weapons/Melee/baseball_bat.rsi
     state: icon
   objectType: Item
 
 - type: construction
-  name: Простыня-призрак
+  name: Простыня-призрак # Imperial Recipes Locale
   id: ghost_sheet
   graph: GhostSheet
   startNode: start
   targetNode: ghost_sheet
   category: construction-category-clothing
-  description: Станьте жутким призраком. Бу! Испугался? Не бойся, я друг!
+  description: Станьте жутким призраком. Бу! Испугался? Не бойся, я друг! # Imperial Recipes Locale
   icon:
     sprite: Clothing/OuterClothing/Misc/ghostsheet.rsi
     state: icon
   objectType: Item
 
 - type: construction
-  name: Стяжки
+  name: Стяжки # Imperial Recipes Locale
   id: makeshifthandcuffs
   graph: makeshifthandcuffs
   startNode: start
   targetNode: cuffscable
   category: construction-category-tools
-  description: Прочные одноразовые пластиковые кабельные стяжки.
+  description: Прочные одноразовые пластиковые кабельные стяжки. # Imperial Recipes Locale
   icon: { sprite: Objects/Misc/cablecuffs.rsi, state: cuff }
   objectType: Item
 
 - type: construction
-  name: Шок-палка
+  name: Шок-палка # Imperial Recipes Locale
   id: makeshiftstunprod
   graph: makeshiftstunprod
   startNode: start
   targetNode: msstunprod
   category: construction-category-weapons
-  description: Самодельная дубинка-шокер.
+  description: Самодельная дубинка-шокер. # Imperial Recipes Locale
   icon: { sprite: Objects/Weapons/Melee/stunprod.rsi, state: stunprod_off }
   objectType: Item
 
 - type: construction
-  name: Намордник
+  name: Намордник # Imperial Recipes Locale
   id: muzzle
   graph: Muzzle
   startNode: start
   targetNode: muzzle
   category: construction-category-tools
   objectType: Item
-  description: Намордник, чтобы заткнуть жертву.
+  description: Намордник, чтобы заткнуть жертву. # Imperial Recipes Locale
   icon:
     sprite: Clothing/Mask/muzzle.rsi
     state: icon
 
 - type: construction
-  name: Импровизированная пневматическая пушка
+  name: Импровизированная пневматическая пушка # Imperial Recipes Locale
   id: pneumaticcannon
   graph: PneumaticCannon
   startNode: start
   targetNode: cannon
   category: construction-category-weapons
   objectType: Item
-  description: Этот сукин сын может выстрелить из всего, что в него поместится, используя лишь немного газа.
+  description: Этот сукин сын может выстрелить из всего, что в него поместится, используя лишь немного газа. # Imperial Recipes Locale
   icon:
     sprite: Objects/Weapons/Guns/Cannons/pneumatic_cannon.rsi
     state: icon
 
 - type: construction
-  name: Бинт
+  name: Бинт # Imperial Recipes Locale
   id: gauze
   graph: Gauze
   startNode: start
   targetNode: gauze
   category: construction-category-tools
   objectType: Item
-  description: Когда у тебя действительно ничего не осталось.
+  description: Когда у тебя действительно ничего не осталось. # Imperial Recipes Locale
   icon:
     sprite: Objects/Specific/Medical/medical.rsi
     state: gauze
 
 - type: construction
-  name: Повязка на глаза
+  name: Повязка на глаза # Imperial Recipes Locale
   id: blindfold
   graph: Blindfold
   startNode: start
   targetNode: blindfold
   category: construction-category-tools
   objectType: Item
-  description: Полоса непроницаемого материала.
+  description: Полоса непроницаемого материала. # Imperial Recipes Locale
   icon:
     sprite: Clothing/Eyes/Misc/blindfold.rsi
     state: icon
 
 - type: construction
-  name: Цветочный венок
+  name: Цветочный венок # Imperial Recipes Locale
   id: flowerwreath
   graph: flowerwreath
   startNode: start
   targetNode: flowerwreath
   category: construction-category-clothing
-  description: Венок из ярких цветов.
+  description: Венок из ярких цветов. # Imperial Recipes Locale
   icon:
     sprite: Clothing/Head/Misc/flower-wreath.rsi
     state: icon
   objectType: Item
 
 - type: construction
-  name: Тряпочка
+  name: Тряпочка # Imperial Recipes Locale
   id: rag
   graph: Rag
   startNode: start
   targetNode: rag
   category: construction-category-tools
   objectType: Item
-  description: Влажная тряпка для очистки земли. Это лучше, чем скользить весь день.
+  description: Влажная тряпка для очистки земли. Это лучше, чем скользить весь день. # Imperial Recipes Locale
   icon:
     sprite: Objects/Specific/Janitorial/rag.rsi
     state: rag
 
 - type: construction
-  name: Самодельный дробовик
+  name: Самодельный дробовик # Imperial Recipes Locale
   id: improvisedshotgun
   graph: ImprovisedShotgunGraph
   startNode: start
   targetNode: shotgun
   category: construction-category-weapons
   objectType: Item
-  description: Дерьмовый дробовик ручной работы, использующий патроны 50-го калибра. В патроннике можно держать лишь один патрон.
+  description: Дерьмовый дробовик ручной работы, использующий патроны 50-го калибра. В патроннике можно держать лишь один патрон. # Imperial Recipes Locale
   icon:
     sprite: Objects/Weapons/Guns/Shotguns/improvised_shotgun.rsi
     state: icon
 
 - type: construction
-  name: Самодельный патрон для дробовика
+  name: Самодельный патрон для дробовика # Imperial Recipes Locale
   id: ShellShotgunImprovised
   graph: ImprovisedShotgunShellGraph
   startNode: start
   targetNode: shell
   category: construction-category-weapons
   objectType: Item
-  description: Самодельный патрон 50-го калибра, стреляющий шрапнелью из осколков стекла.
+  description: Самодельный патрон 50-го калибра, стреляющий шрапнелью из осколков стекла. # Imperial Recipes Locale
   icon:
     sprite: Objects/Weapons/Guns/Ammunition/Casings/shotgun_shell.rsi
     state: improvised
 
 - type: construction
-  name: Приклад
+  name: Приклад # Imperial Recipes Locale
   id: riflestock
   graph: RifleStockGraph
   startNode: start
   targetNode: riflestock
   category: construction-category-weapons
   objectType: Item
-  description: Ложа, вырезанная из дерева, необходимая для самодельного огнестрельного оружия.
+  description: Ложа, вырезанная из дерева, необходимая для самодельного огнестрельного оружия. # Imperial Recipes Locale
   icon:
     sprite: Objects/Misc/rifle_stock.rsi
     state: icon
 
 - type: construction
-  name: Зажигательная бомба
+  name: Зажигательная бомба # Imperial Recipes Locale
   id: firebomb
   graph: FireBomb
   startNode: start
   targetNode: firebomb
   category: construction-category-weapons
   objectType: Item
-  description: Слабое самодельное зажигательное устройство.
+  description: Слабое самодельное зажигательное устройство. # Imperial Recipes Locale
   icon:
     sprite: Objects/Weapons/Bombs/ied.rsi
     state: icon
 
 - type: construction
-  name: Хлопковая ткань
+  name: Хлопковая ткань # Imperial Recipes Locale
   id: CottonWovenCloth
   graph: CottonObjects
   startNode: start
   targetNode: cottoncloth
   category: construction-category-misc
-  description: Кусок хлопчатобумажной ткани, сделанный своими руками, на ощупь грубый.
+  description: Кусок хлопчатобумажной ткани, сделанный своими руками, на ощупь грубый. # Imperial Recipes Locale
   icon:
     sprite: Objects/Materials/materials.rsi
     state: cloth_3
   objectType: Item
 
 - type: construction
-  name: Соломенная шляпа
+  name: Соломенная шляпа # Imperial Recipes Locale
   id: strawHat
   graph: StrawHat
   startNode: start
   targetNode: strawhat
   category: construction-category-clothing
-  description: Шикарная шапка для жарких дней! Не рекомендуется носить вблизи огня.
+  description: Шикарная шапка для жарких дней! Не рекомендуется носить вблизи огня. # Imperial Recipes Locale
   icon:
     sprite: Clothing/Head/Hats/straw_hat.rsi
     state: icon
   objectType: Item
 
 - type: construction
-  name: Трубчатая бомба
+  name: Трубчатая бомба # Imperial Recipes Locale
   id: pipebomb
   graph: PipeBomb
   startNode: start
   targetNode: pipebomb
   category: construction-category-weapons
   objectType: Item
-  description: Самодельное взрывчатое устройство, сделанное из труб и проволоки.
+  description: Самодельное взрывчатое устройство, сделанное из труб и проволоки. # Imperial Recipes Locale
   icon:
     sprite: Objects/Weapons/Bombs/pipebomb.rsi
     state: icon
     
 - type: construction
-  name: Скалка
+  name: Скалка # Imperial Recipes Locale
   id: rollingpin
   graph: WoodenRollingPin
   startNode: start
   targetNode: rollingpin
   category: construction-category-tools
   objectType: Item
-  description: Скалка, используемая для приготовления пищи и защиты кухни.
+  description: Скалка, используемая для приготовления пищи и защиты кухни. # Imperial Recipes Locale
   icon:
     sprite: Objects/Tools/rolling_pin.rsi
     state: icon
