--- a/Resources/Prototypes/Recipes/Crafting/smokeables.yml
+++ b/Resources/Prototypes/Recipes/Crafting/smokeables.yml
@@ -1,91 +1,91 @@
 - type: construction
-  name: Косяк
+  name: Косяк # Imperial Recipes Locale
   id: smokeableJoint
   graph: smokeableJoint
   startNode: start
   targetNode: joint
   category: construction-category-misc
-  description: Самокрутка из высушенного растения, завернутого в тонкую бумагу.
+  description: Самокрутка из высушенного растения, завернутого в тонкую бумагу. # Imperial Recipes Locale
   icon: { sprite: Objects/Consumable/Smokeables/Cannabis/joint.rsi, state: unlit-icon }
   objectType: Item
 
 - type: construction
-  name: Радужный косяк
+  name: Радужный косяк # Imperial Recipes Locale
   id: smokeableJointRainbow
   graph: smokeableJointRainbow
   startNode: start
   targetNode: jointRainbow
   category: construction-category-misc
-  description: Самокрутка из высушенного растения, завернутого в тонкую бумагу.
+  description: Самокрутка из высушенного растения, завернутого в тонкую бумагу. # Imperial Recipes Locale
   icon: { sprite: Objects/Consumable/Smokeables/Cannabis/joint.rsi, state: unlit-icon }
   objectType: Item
 
 - type: construction
-  name: Блант
+  name: Блант # Imperial Recipes Locale
   id: smokeableBlunt
   graph: smokeableBlunt
   startNode: start
   targetNode: blunt
   category: construction-category-misc
-  description: Самокрутка из высушенного растения, завернутого в высушенный табачный лист.
+  description: Самокрутка из высушенного растения, завернутого в высушенный табачный лист. # Imperial Recipes Locale
   icon: { sprite: Objects/Consumable/Smokeables/Cannabis/blunt.rsi, state: unlit-icon }
   objectType: Item
   
 - type: construction
-  name: Радужный блант
+  name: Радужный блант # Imperial Recipes Locale
   id: smokeableBluntRainbow
   graph: smokeableBluntRainbow
   startNode: start
   targetNode: bluntRainbow
   category: construction-category-misc
-  description: Самокрутка из высушенного растения, завернутого в высушенный табачный лист.
+  description: Самокрутка из высушенного растения, завернутого в высушенный табачный лист. # Imperial Recipes Locale
   icon: { sprite: Objects/Consumable/Smokeables/Cannabis/blunt.rsi, state: unlit-icon }
   objectType: Item
 
 - type: construction
-  name: Сигарета
+  name: Сигарета # Imperial Recipes Locale
   id: smokeableCigarette
   graph: smokeableCigarette
   startNode: start
   targetNode: cigarette
   category: construction-category-misc
-  description: Самокрутка с табаком и никотином.
+  description: Самокрутка с табаком и никотином. # Imperial Recipes Locale
   icon: { sprite: Objects/Consumable/Smokeables/Cigarettes/cigarette.rsi, state: unlit-icon }
   objectType: Item
 
 # I wanted to put a hand-grinder here but we need construction graphs that use non-consumed catalysts first.
 
 - type: construction
-  name: Измельчённый канабис
+  name: Измельчённый канабис # Imperial Recipes Locale
   id: smokeableGroundCannabis
   graph: smokeableGroundCannabis
   startNode: start
   targetNode: ground
   category: construction-category-misc
-  description: Молотый каннабис, готовый ввести вас в трип.
+  description: Молотый каннабис, готовый ввести вас в трип. # Imperial Recipes Locale
   icon: { sprite: Objects/Misc/reagent_fillings.rsi, state: powderpile }
 #    color: darkgreen
   objectType: Item
   
 - type: construction
-  name: Радужный измельчённый канабис
+  name: Радужный измельчённый канабис # Imperial Recipes Locale
   id: smokeableGroundCannabisRainbow
   graph: smokeableGroundCannabisRainbow
   startNode: start
   targetNode: groundRainbow
   category: construction-category-misc
-  description: Молотый радужный каннабис, готовый ввести вас в трип.
+  description: Молотый радужный каннабис, готовый ввести вас в трип. # Imperial Recipes Locale
   icon: { sprite: Objects/Specific/Hydroponics/rainbow_cannabis.rsi, state: powderpile_rainbow }
   objectType: Item
 
 - type: construction
-  name: Измельчённый табак
+  name: Измельчённый табак # Imperial Recipes Locale
   id: smokeableGroundTobacco
   graph: smokeableGroundTobacco
   startNode: start
   targetNode: ground
   category: construction-category-misc
-  description: Измельчённый табак, идеально подходящий для самокруток.
+  description: Измельчённый табак, идеально подходящий для самокруток. # Imperial Recipes Locale
   icon: { sprite: Objects/Misc/reagent_fillings.rsi, state: powderpile }
 #    color: brown
   objectType: Item
