--- a/Resources/Prototypes/Recipes/Crafting/web.yml
+++ b/Resources/Prototypes/Recipes/Crafting/web.yml
@@ -1,11 +1,11 @@
 - type: construction
-  name: Пол из паутины
-  id: TileWeb
+  name: Пол из паутины # Imperial Recipes Locale
+  id: TileWeb 
   graph: WebObjects
   startNode: start
   targetNode: tile
   category: construction-category-tiles
-  description: Красиво и гладко.
+  description: Красиво и гладко. # Imperial Recipes Locale
   entityWhitelist:
     tags:
     - SpiderCraft
@@ -15,13 +15,13 @@
   objectType: Item
 
 - type: construction
-  name: Зимняя куртка из паутины
+  name: Зимняя куртка из паутины # Imperial Recipes Locale
   id: ClothingOuterWinterWeb
   graph: WebObjects
   startNode: start
   targetNode: coat
   category: construction-category-clothing
-  description: Удивительно теплая и прочная.
+  description: Удивительно теплая и прочная. # Imperial Recipes Locale
   entityWhitelist:
     tags:
     - SpiderCraft
@@ -31,13 +31,13 @@
   objectType: Item
 
 - type: construction
-  name: Комбинезон из паутины
+  name: Комбинезон из паутины # Imperial Recipes Locale
   id: ClothingUniformJumpsuitWeb
   graph: WebObjects
   startNode: start
   targetNode: jumpsuit
   category: construction-category-clothing
-  description: По крайней мере, это хоть что-то.
+  description: По крайней мере, это хоть что-то. # Imperial Recipes Locale
   entityWhitelist:
     tags:
     - SpiderCraft
@@ -47,13 +47,13 @@
   objectType: Item
 
 - type: construction
-  name: Юбка-комбинезон из паутины
+  name: Юбка-комбинезон из паутины # Imperial Recipes Locale
   id: ClothingUniformJumpskirtWeb
   graph: WebObjects
   startNode: start
   targetNode: jumpskirt
   category: construction-category-clothing
-  description: По крайней мере, это хоть что-то.
+  description: По крайней мере, это хоть что-то. # Imperial Recipes Locale
   entityWhitelist:
     tags:
     - SpiderCraft
@@ -63,13 +63,13 @@
   objectType: Item
 
 - type: construction
-  name: Ткань
+  name: Ткань # Imperial Recipes Locale
   id: SilkWovenCloth
   graph: WebObjects
   startNode: start
   targetNode: cloth
   category: construction-category-materials
-  description: На ощупь как ткань, как ни странно.
+  description: На ощупь как ткань, как ни странно. # Imperial Recipes Locale
   entityWhitelist:
     tags:
     - SpiderCraft
@@ -79,13 +79,13 @@
   objectType: Item
 
 - type: construction
-  name: Щит из паутины
+  name: Щит из паутины # Imperial Recipes Locale
   id: WebShield
   graph: WebObjects
   startNode: start
   targetNode: shield
   category: construction-category-clothing
-  description: Он достаточно толстый, чтобы выдержать несколько ударов, но вряд ли температуру.
+  description: Он достаточно толстый, чтобы выдержать несколько ударов, но вряд ли температуру. # Imperial Recipes Locale
   entityWhitelist:
     tags:
     - SpiderCraft
@@ -95,13 +95,13 @@
   objectType: Item
 
 - type: construction
-  name: Зимние ботинки из паутины
+  name: Зимние ботинки из паутины # Imperial Recipes Locale
   id: ClothingShoesBootsWinterWeb
   graph: WebObjects
   startNode: start
   targetNode: boots
   category: construction-category-clothing
-  description: Плотно сплетенная паутина должна защищать от холода.
+  description: Плотно сплетенная паутина должна защищать от холода. # Imperial Recipes Locale
   entityWhitelist:
     tags:
     - SpiderCraft
